Fixed spacing on 'headers'

--- a/CBE_Chrome_Extension/css/style.css
+++ b/CBE_Chrome_Extension/css/style.css
@@ -42,6 +42,10 @@ body {
   position: absolute;
 }
 
+.leftBuffer {
+  padding-left: 45;
+}
+
 .backFilter {
   cursor: pointer;
   visibility: hidden;
